# time-travel

./: .gitignore  CHANGELOG.md  LICENSE  README.md  conftest.py  pyproject.toml
.claude-plugin/: marketplace.json
docs/handoff/: 2026-07-05-unification-complete.md  time-travel-audit.md
docs/superpowers/plans/: 2026-05-26-time-travel-v1-plan-a-foundation.md
docs/superpowers/specs/: 2026-05-26-time-travel-cross-harness-design.md  2026-06-06-plan-b-engine-and-matrix-renderer.md
examples/: sample-claims.json  sample-exec.md  sample-plan.md  sample-report.html  sample-report.json  sample-report.md
handoffs/: 2026-05-28-plan-a-complete.md  2026-06-06-plan-b-spec-complete.md  2026-07-05-plan-b-complete-audit-summary.md
harnesses/gemini/: README.md
src/time_travel/: cli.py  models.py  orchestrator.py  synthesis.py
src/time_travel/personas/: library.py  selection.py
src/time_travel/providers/: anthropic_provider.py  base.py  gemini_provider.py  openai_provider.py  stub_provider.py
src/time_travel/render/: exec_pager.py  html_matrix.py  markdown.py
src/time_travel/search/: tavily.py
src/time_travel/templates/: _css_matrix.css.j2  _js_tabs.js.j2  _zone_confidence.html.j2  _zone_evidence.html.j2  _zone_header.html.j2  _zone_mitigations.html.j2  _zone_risks.html.j2  exec.html.j2  (+4 more)
tests/: test_claims.py  test_cli.py  test_models.py  test_orchestrator.py  test_personas.py  test_provider_base.py  test_providers.py  test_render_exec.py  test_render_exec_html.py  test_render_html.py  test_render_markdown.py  test_search.py  test_stub_search.py  test_synthesis.py
(+28 files in other folders)
