[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "time-travel-premortem"
version = "1.0.0.dev0"
description = "Multi-agent premortem for plans. Provider-agnostic, HTML + Markdown reports."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Chris Sood", email = "chrisaman.sood@gmail.com"}]
requires-python = ">=3.10"
keywords = ["premortem", "ai", "risk-analysis", "planning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "anthropic>=0.30",
    "openai>=1.50",
    "google-genai>=0.5",
    "tavily-python>=0.5",
    "jinja2>=3.1",
    "rich>=13",
    "dataclasses-json>=0.6",
]

[project.scripts]
time-travel = "time_travel.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
